--- a/dvds.html
+++ b/dvds.html
@@ -122,7 +122,12 @@
 
       </div>
 
-      <script src="../js/jquery-1.11.3.min.js"></script>
+      <script
+        src="https://code.jquery.com/jquery-3.4.1.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+        crossorigin="anonymous">
+      </script>
+
       <script>
          var $filters = $('#filters');
          var templatesAvailable = $('.template', '.templates').not('.filter-chooser').length;
